# hyperverse

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  AGENTS.md  CMakeLists.txt  Doxyfile  README.md  TODO.md  build_and_deploy.sh  build_emscripten_deploy_dir.sh  make_docs.sh
.github/workflows/: deploy.yml
assets/sector7/: README.md
assets/shaders/: line.vert  line.vert.spv  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv
cmake/: CPM.cmake  CompilerWarnings.cmake
docs/: DECISIONS.md  GAME_VISION.md  HUD_DESIGN.md  INSTALL.md  SYSTEMS.md  VERTICAL_SLICE.md
docs/tour/: architecture.md  context-objects.md  development.md  event-flow.md  event-reference.md  glossary.md  index.md  package-lock.json  package.json  state-machines.md
docs/tour/.vitepress/: config.ts
docs/tour/libraries/: boost_ext_sml.md  entt.md  eventpp.md
include/hyperverse/: account_context.hpp  account_state.hpp  app.hpp  asteroid_collision.hpp  asteroid_fragmentation.hpp  asteroid_geometry.hpp  asteroid_mass.hpp  camera.hpp  cargo.hpp  cargo_box.hpp  cargo_dispatch.hpp  cargo_escort.hpp  cargo_extraction.hpp  cargo_manifest.hpp  cargo_route.hpp  cargo_train.hpp  collision.hpp  dawn_renderer.hpp  domain_events.hpp  drone.hpp  engine_trail.hpp  fixed_timestep.hpp  flight.hpp  game_context.hpp  game_session.hpp  grand_central.hpp  gravity_sling.hpp  harpoon.hpp  hud_notice.hpp  hud_title.hpp  input.hpp  math.hpp  mining.hpp  physics.hpp  pressure.hpp  projectile.hpp  radar_control.hpp  radar_hud.hpp  raider.hpp  render_frame.hpp  (+12 more)
scripts/: build-emscripten-container.sh  build-emscripten.sh  generate-sprite-collision-shapes.py  install-dev-deps.sh  install-msys2-dev-deps.sh
src/: account_context.cpp  account_state.cpp  app.cpp  asteroid_fragmentation.cpp  asteroid_geometry.cpp  asteroid_mass.cpp  camera.cpp  cargo.cpp  cargo_box.cpp  cargo_dispatch.cpp  cargo_escort.cpp  cargo_extraction.cpp  cargo_manifest.cpp  cargo_route.cpp  cargo_train.cpp  collision.cpp  dawn_renderer.cpp  drone.cpp  engine_trail.cpp  fixed_timestep.cpp  flight.cpp  game_context.cpp  game_session.cpp  grand_central.cpp  gravity_sling.cpp  harpoon.cpp  hud_notice.cpp  hud_title.cpp  input.cpp  jolt_shape_queries.cpp  jolt_shape_queries.hpp  main.cpp  mining.cpp  physics.cpp  png_rgba.cpp  png_rgba.hpp  pressure.cpp  projectile.cpp  radar_control.cpp  radar_hud.cpp  (+21 more)
tests/: architecture_tests.cpp  asteroid_fragmentation_tests.cpp  asteroid_geometry_tests.cpp  bootstrap_tests.cpp  cargo_tests.cpp  collision_tests.cpp  drone_tests.cpp  engine_trail_tests.cpp  fixed_timestep_tests.cpp  flight_tests.cpp  game_session_tests.cpp  gravity_sling_tests.cpp  harpoon_tests.cpp  hud_notice_tests.cpp  input_tests.cpp  mining_tests.cpp  pressure_tests.cpp  projectile_tests.cpp  radar_hud_tests.cpp  raider_tests.cpp  render_frame_tests.cpp  sector_tests.cpp  ship_status_tests.cpp  sprite_collision_shape_tests.cpp  targeting_tests.cpp  test_common.hpp
webserve/: app.js  index.html  nginx.conf
